--- a/contacto.html
+++ b/contacto.html
@@ -17,10 +17,10 @@
             <li><a href='index.html'>INICIO</a></li>
             <li><a class='dropdown-arrow' href='http://'>PRODUCTOS</a>
                 <ul class='sub-menus'>
-                    <li><a href='http://'>Products 1</a></li>
-                    <li><a href='http://'>Products 2</a></li>
-                    <li><a href='http://'>Products 3</a></li>
-                    <li><a href='http://'>Products 4</a></li>
+                    <li><a href='http://'>Producto 1</a></li>
+                    <li><a href='http://'>Producto 2</a></li>
+                    <li><a href='http://'>Producto 3</a></li>
+                    <li><a href='http://'>Producto 4</a></li>
                 </ul>
             </li>
             <li><a href='sobrenosotros.html'>SOBRE NOSOTROS</a></li>
@@ -28,7 +28,7 @@
                 <ul class='sub-menus'>
                     <li><a href='http://'>PELUQUERIA</a></li>
                     <li><a href='http://'>SPA</a></li>
-                    <li><a href='http://'>Services 3</a></li>
+                    <li><a href='http://'>ATENCIÓN VETERINARIA</a></li>
                 </ul>
             </li>
             <li><a href='contacto.html'>CONTACTO</a></li>
@@ -55,29 +55,9 @@
                     <input type="text" name="apellido" id="apellido" size="10" maxlength="5" required>
 
                     <br>
-                    <!-- DNI -->
-                    <label for="dni">DNI: </label>
-                    <input type="number">
-
-                    <br>
-                    <!-- Nro de Trámite -->
-                    <label for="nro_tramite">Número de Trámite: </label>
-                    <input type="password">
-
-                    <br>
-                    <!-- Cant de Hijos -->
-                    <label for="hijos">Nro de Hijos (0 a 10): </label>
-                    <input type="number" min="0" max="10">
-
-                    <br>
                     <!-- Mail -->
                     <label for="mail">Mail: </label>
                     <input type="email">
-
-                    <br>
-                    <!-- Fecha de Nacimiento -->
-                    <label for="fecnac">Fecha de Nacimiento: </label>
-                    <input type="date" min="2023-01-01" max="2023-12-31">
 
                     <br>
                     <!-- Adjuntar archivo -->
