--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <li><a href='index.html'>INICIO</a></li>
             <li><a class='dropdown-arrow' href='http://'>PRODUCTOS</a>
                 <ul class='sub-menus'>
-                    <li><a href='http://'>Products 1</a></li>
-                    <li><a href='http://'>Products 2</a></li>
-                    <li><a href='http://'>Products 3</a></li>
-                    <li><a href='http://'>Products 4</a></li>
+                    <li><a href='http://'>Producto 1</a></li>
+                    <li><a href='http://'>Producto 2</a></li>
+                    <li><a href='http://'>Producto 3</a></li>
+                    <li><a href='http://'>Producto 4</a></li>
                 </ul>
             </li>
             <li><a href='sobrenosotros.html'>SOBRE NOSOTROS</a></li>
@@ -28,7 +28,7 @@
                 <ul class='sub-menus'>
                     <li><a href='http://'>PELUQUERIA</a></li>
                     <li><a href='http://'>SPA</a></li>
-                    <li><a href='http://'>Services 3</a></li>
+                    <li><a href='http://'>ATENCIÓN VETERINARIA</a></li>
                 </ul>
             </li>
             <li><a href='contacto.html'>CONTACTO</a></li>
