--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset='UTF-8'>
     <link rel='stylesheet' href='css/style.css'>
     <script src='js/script.js'></script>
-    <title>PUPPY - Spa Canino</title>
+    <title>PetSpa</title>
     <!-- Agregar el Favicon -->
-    <link rel="icon" href="img/android-chrome-192x192.png">
+    <link rel="shortcut icon" href="img/android-chrome-192x192.png"
+
 </head>
 
 <body>
@@ -17,10 +18,10 @@
             <li><a href='index.html'>INICIO</a></li>
             <li><a class='dropdown-arrow' href='http://'>PRODUCTOS</a>
                 <ul class='sub-menus'>
-                    <li><a href='http://'>Producto 1</a></li>
-                    <li><a href='http://'>Producto 2</a></li>
-                    <li><a href='http://'>Producto 3</a></li>
-                    <li><a href='http://'>Producto 4</a></li>
+                    <li><a href='http://'>COLLARES</a></li>
+                    <li><a href='http://'>INDUMENTARIA</a></li>
+                    <li><a href='http://'>LUDOTECA</a></li>
+                    <li><a href='http://'>MANTAS Y COLLARES</a></li>
                 </ul>
             </li>
             <li><a href='sobrenosotros.html'>SOBRE NOSOTROS</a></li>
@@ -43,22 +44,22 @@
             <h1>PELUQUERIA CANINA</h1>
             <h3>Sobre nosotros</h3>
             <hr>
-            <p>Se nos reconoce por el cuidado y arreglo de perros a través de lavados y cortes de pelo.
-                Aquellos que nos conocen destacan nuestra capacidad para manejar a los animales con calma y seguridad,
-                creando un ambiente relajante para ellos durante el proceso de aseo, con adaptación de técnicas
-                de acuerdo a las necesidades de cada raza. Como resultado ofrecemos alta calidad en los productos
-                utilizados y la comodidad constante de los perros. Buscamos establecer vínculos de confianza y
-                cooperación con los
-                animales, lo que facilita el proceso de aseo. Disfrutamos brindando a los perros un aspecto
-                saludable y agradable, y la destreza en el manejo de herramientas y productos de aseo es apreciada por
-                aquellos que han confiado en los servicios brindados. Nuestro compromiso radica en proporcionar cuidado
-                excepcional a
-                cada mascota, y mostrar nuestro cariño por los animales.
+            <p> Se nos reconoce por el cuidado integral de los animales a traves de brindar servicios de aseo y coiffeur, tambien ofrecemos el servicio de SPA que consiste en circuito hidrico, actividades recreativas, de entrenamiento y paseos. 
+                Asi mismo es un espacio para ofrecer vinculos con distintos entidades relacionadas a la salud animal.
+                Como resultado ofrecemos alta calidad en los servicios brindados buscando la comodidad y bienestar de la mascota y sus dueños. 
+                Proponemos establecer vinculos de confianza y cooperacion con los animales, lo que facilita el proceso de aseo y confort.
+                Contamos con un equipo capacitado para emplear herramientas  y productos de excelencia apuntando a proporcionar un cuidado integral y personalizado que se ajuste a cada mascota otorgandoles todo nuestro cariño y respeto hacia ellos.
+
             </p>
+            <div class = "sliver">
+                <img src="img/"
+            </div>
+
+
             <br>
 
             <footer>
-                <h4>😎 2023 Codo a Codo. Todos los derechos reservados </h4>
+                <h4>PETSPA😎 2023 Codo a Codo. Todos los derechos reservados </h4>
             </footer>
 </body>
 
