--- a/index.html
+++ b/index.html
@@ -1,66 +1,87 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <meta charset='UTF-8'>
     <link rel='stylesheet' href='css/style.css'>
     <script src='js/script.js'></script>
     <title>PetSpa</title>
-    <!-- Agregar el Favicon -->
-    <link rel="shortcut icon" href="img/android-chrome-192x192.png"
 
+    <!-- Agregar el Favicon -->
+    <link rel="icon" href="img/favicon.png">
+
+    <!-- Agregar fuentes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <nav id='menu'>
-        <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
-        <ul>
-            <li><a href='index.html'>INICIO</a></li>
-            <li><a class='dropdown-arrow' href='http://'>PRODUCTOS</a>
-                <ul class='sub-menus'>
-                    <li><a href='http://'>COLLARES</a></li>
-                    <li><a href='http://'>INDUMENTARIA</a></li>
-                    <li><a href='http://'>LUDOTECA</a></li>
-                    <li><a href='http://'>MANTAS Y COLLARES</a></li>
-                </ul>
-            </li>
-            <li><a href='sobrenosotros.html'>SOBRE NOSOTROS</a></li>
-            <li><a class='dropdown-arrow' href='servicios.html'>SERVICIOS</a>
-                <ul class='sub-menus'>
-                    <li><a href='http://'>PELUQUERIA</a></li>
-                    <li><a href='http://'>SPA</a></li>
-                    <li><a href='http://'>ATENCIÓN VETERINARIA</a></li>
-                </ul>
-            </li>
-            <li><a href='contacto.html'>CONTACTO</a></li>
-        </ul>
-    </nav>
-    <!-- Banner -->
-    <img src="img/Banner De Twitch Kawaii Gato Estético Rosa Naranja.png" alt="banner_inicio">
+        <!-- Navbar -->
+        <nav>
+            <h1><img src="img/logo.png" alt=""></a>PetSpa</h1>
+            <ul class="navegacion">
+                <li><a href="index.html" class="nav-link">Inicio</a></li>
+                <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+                <li><a href="productos.html" class="nav-link">Productos</a></li>
+                <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+            </ul>
+            <ul>
+                <li><a href="#" class="nav-link">Soy cliente</a></li>
+            </ul>
+            <button class="menu-hamburguesa" id="menu-hamburguesa">
+                <ion-icon class="barras" name="menu-outline"></ion-icon>
+            </button>
+        </nav>
 
-    <main>
-        <!-- Sección Inicio -->
-        <section>
-            <h1>PELUQUERIA CANINA</h1>
-            <h3>Sobre nosotros</h3>
-            <hr>
-            <p> Se nos reconoce por el cuidado integral de los animales a traves de brindar servicios de aseo y coiffeur, tambien ofrecemos el servicio de SPA que consiste en circuito hidrico, actividades recreativas, de entrenamiento y paseos. 
-                Asi mismo es un espacio para ofrecer vinculos con distintos entidades relacionadas a la salud animal.
-                Como resultado ofrecemos alta calidad en los servicios brindados buscando la comodidad y bienestar de la mascota y sus dueños. 
-                Proponemos establecer vinculos de confianza y cooperacion con los animales, lo que facilita el proceso de aseo y confort.
-                Contamos con un equipo capacitado para emplear herramientas  y productos de excelencia apuntando a proporcionar un cuidado integral y personalizado que se ajuste a cada mascota otorgandoles todo nuestro cariño y respeto hacia ellos.
-
+    <!-- Sobre nosotros -->
+    <section class="hero" id="about">
+        <img src="img/imagen_spa.jpg" alt="nahir-leiva" loading="lazy" class="hero-img" />
+        <div class="bio animate__animated animate__shakeX">
+            <h2 class="bio-titulo">CUIDAMOS DE TU MASCOTA</h2>
+            <p class="bio-texto">
+                Dale a tus adoradas mascotas la experiencia de un spa de lujo que se merecen.
+                Contáctanos hoy y descubre cómo podemos hacer que se sientan mimados y felices.
             </p>
-            <div class = "sliver">
-                <img src="img/"
-            </div>
+        </div>
+    </section>
+
+    <section class="mas-sobre">
+        <h2>SOBRE NOSOTROS</h2>
+        <p>
+            Se nos reconoce por el cuidado y arreglo de mascotas a través de lavados y cortes de pelo.
+            Aquellos que nos conocen destacan nuestra capacidad para manejar a los animales con calma y seguridad,
+            creando un ambiente relajante para ellos durante el proceso de aseo, con adaptación de técnicas
+            de acuerdo a las necesidades de cada raza.
+        </p>
+        <br>
+        <p>
+            Ofrecemos alta calidad en los productos utilizados y la comodidad constante de los animales. 
+            Buscamos establecer vínculos de confianza y cooperación lo que facilita el proceso de aseo.
+        </p>
+        <br>
+        <p>
+            Disfrutamos brindando un aspecto saludable y agradable, y la destreza en el manejo de herramientas y 
+            productos de aseo es apreciada por aquellos que han confiado en los servicios brindados. 
+            Nuestro compromiso radica en proporcionar cuidado excepcional a cada mascota, 
+            y mostrar nuestro cariño por los animales.
+        </p>
+    </section>
 
 
-            <br>
-
-            <footer>
-                <h4>PETSPA😎 2023 Codo a Codo. Todos los derechos reservados </h4>
-            </footer>
+    <!-- footer -->
+    <footer>
+        <p class="copy">&copy; Copyright PetSpa 2023</p>
+        <br>
+        <p>Atención al cliente - Lunes a Sábados de 9 a 20hs.</p>
+        <br>
+        <p><a href="mailto:petspa@gmail.com"></a>petspa@gmail.com</p>
+        <br>
+        <p class="copy">
+            Desarrollado &#x2661; por
+            <a href="https://twitter.com/koladechris" target="_blank">Grupo Codo A Codo</a>
+        </p>
+    </footer>
 </body>
 
 </html>
