--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    
         <!-- Navbar -->
         <nav>
             <h1><img src="img/logo.png" alt=""></a>PetSpa</h1>
@@ -71,17 +72,19 @@
 
     <!-- footer -->
     <footer>
-        <p class="copy">&copy; Copyright PetSpa 2023</p>
-        <br>
-        <p>Atención al cliente - Lunes a Sábados de 9 a 20hs.</p>
-        <br>
-        <p><a href="mailto:petspa@gmail.com"></a>petspa@gmail.com</p>
-        <br>
-        <p class="copy">
-            Desarrollado &#x2661; por
-            <a href="https://twitter.com/koladechris" target="_blank">Grupo Codo A Codo</a>
-        </p>
-    </footer>
+        <div class="container">
+            <p class="copy">&copy; Copyright PetSpa 2023</p>
+            <br>
+            <p>Atención al cliente - Lunes a Sábados de 9 a 20hs.</p>
+            <br>
+            <p><a href="mailto:petspa@gmail.com"></a>petspa@gmail.com</p>
+            <br>
+            <p class="copy">
+                Desarrollado &#x2661; por
+                <a href="https://twitter.com/koladechris" target="_blank">Grupo Codo A Codo</a>
+            </p>
+        </div>
+       </footer>
 </body>
 
 </html>
