--- a/contacto.html
+++ b/contacto.html
@@ -98,7 +98,18 @@
 
 
     <footer>
-        <h4>😎 2023 Codo a Codo. Todos los derechos reservados </h4>
+         <div class="container">
+            <p class="copy">&copy; Copyright PetSpa 2023</p>
+            <br>
+            <p>Atención al cliente - Lunes a Sábados de 9 a 20hs.</p>
+            <br>
+            <p><a href="mailto:petspa@gmail.com"></a>petspa@gmail.com</p>
+            <br>
+            <p class="copy">
+                Desarrollado &#x2661; por
+                <a href="https://twitter.com/koladechris" target="_blank">Grupo Codo A Codo</a>
+            </p>
+        </div>
     </footer>
 </body>
 
