--- a/servicios.html
+++ b/servicios.html
@@ -1,102 +1,155 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js"></script>
-    <title>PetSpa-Servicios</title>
-    <!-- Agregar el Favicon -->
-    <link rel="icon" href="img/favicon.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="css/style.css" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>PetSpa-Servicios</title>
+  <!-- Agregar el Favicon -->
+  <link rel="icon" href="img/favicon.png" />
 
-      <!-- Agregar fuentes -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-  </head>
+  <!-- Agregar fuentes -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+</head>
 
-  <body>
-    <header>
-      <nav>
-        <h1><img src="img/logo.png" alt=""></a>PetSpa</h1>
-        <ul class="navegacion">
-            <li><a href="index.html" class="nav-link">Inicio</a></li>
-            <li><a href="servicios.html" class="nav-link">Servicios</a></li>
-            <li><a href="productos.html" class="nav-link">Productos</a></li>
-            <li><a href="contacto.html" class="nav-link">Contacto</a></li>
-        </ul>
-        <ul>
-            <li><a href="#" class="nav-link">Soy cliente</a></li>
-        </ul>
-        <button class="menu-hamburguesa" id="menu-hamburguesa">
-            <ion-icon class="barras" name="menu-outline"></ion-icon>
-        </button>
+<body>
+  <header>
+    <nav>
+      <h1><img src="img/logo.png" alt=""></a>PetSpa</h1>
+      <ul class="navegacion">
+        <li><a href="index.html" class="nav-link">Inicio</a></li>
+        <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+        <li><a href="productos.html" class="nav-link">Productos</a></li>
+        <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+      </ul>
+      <ul>
+        <li><a href="#" class="nav-link">Soy cliente</a></li>
+      </ul>
+      <button class="menu-hamburguesa" id="menu-hamburguesa">
+        <ion-icon class="barras" name="menu-outline"></ion-icon>
+      </button>
     </nav>
-     
-    </header>
-    <hr>
-    <br>
-    <button>Nuestros servicios</button>
-    <br><br>
-<hr>
 
-    <main>
-      <!-- Sección Servicios -->
-      <section class="servicios">
-        <h3>Baño Estético y Sanitaro</h3>
-        <br>
-        <p>
-          El baño Estético es ideal para higienizar a nuestra mascota de forma
-          simple y rápida. <br>
-          Altamente recomendado como procedimiento previo en nuestra Peluqueria.
-          <br><br>
-          El baño santario incluye los cuidados necesarios para que nuestros
-          Pets puedan tener sus orejitas limpias por dentro y por fuera y sus
-          uñitas con un tratamiento de belleza estética. <br />
-          Servicios adicionales a pedido: limpieza de glándulas anales e higiene
-          oral.
-        </p>
-        <br><br>
-        <h3>Circuito Acuático</h3>
-        
-        <br>
-        <p>
-          Este servicio incluye personal cualificado para entrenamiento y
-          terapias en el agua.
-          <br>
-          Desde ir a buscar un juguete hasta caminatas por circuitos de poca
-          profundidad salvando obstáculos. También ofrecemos nado en piletas mas
-          profundas y tobogán acuático.
-          <br>
-          Todo esto y más, supervisado por entrenadores y terapéutas
-          matriculados.
-        </p>
-        <br><br>
-        <h3>Servicio de Gimnasio y Servicio de Entrenamiento</h3>
-        <br><br>
-        <p>
-          Nuestro compromiso con sus mascotas es totalmente serio y
-          profesional. Es por esta razón que ofrecemos entrenadores de modelaje
-          para exposición y entrenadores para Lazarillos...... Próximamente
-          incluiremos entrenadores para mascotas de terapia y de acompañantes
-          terapéuticos para adultos mayores.
-        </p>
-      </section>
-      <hr>
-    </main>  
-      <footer>
-        <div class="container">
-        <p class="copy">&copy; Copyright PetSpa 2023</p>
-        <br>
-        <p>Atención al cliente - Lunes a Sábados de 9 a 20hs.</p>
-        <br>
-        <p><a href="mailto:petspa@gmail.com"></a>petspa@gmail.com</p>
-        <br>
-        <p class="copy">
-            Desarrollado &#x2661; por
-            <a href="https://twitter.com/koladechris" target="_blank">Grupo Codo A Codo</a>
-        </p>
+  </header>
+  <hr>
+  <br>
+  <section class="hero" id="about">
+    <img src="img/lalyimg5.jpg" class="hero-img" />
+    <div class="bio animate__animated animate__shakeX">
+      <h2 class="bio-titulo">Conoce nuestras competencias en cuidados</h2>
+      <p class="mi texto">
+        "Servicios de nivel profesional al alcance de tu bolsillo y para el beneficio de tu mascota".
+      </p>
     </div>
-    </footer>
-     </body>
+    <br>
+  </section>
+  <!-- Sección Servicios -->
+  <section class="navy">
+    <nav>
+      <h3>Nuestros servicios</h3>
+      <div class="navegacion">
+        <button><a href="#baño">Baño Estético y Sanitaro</a></button>
+        <button><a href="#acuatico">Circuito Acuático</a></button>
+        <button><a href="#gym">Servicio de Gimnasio y Servicio de Entrenamiento</a></button>
+
+      </div>
+      <br><br>
+      <hr>
+      <hr>
+
+    </nav>
+  </section>
+  <main class="contenedor">
+
+    <section id="baño" class="servicios">
+      <br><br>
+      <hr>
+      <hr>
+      <br><br>
+      <h3>🐾🧼Baño Estético y Sanitaro🧼🐾</h3>
+      <br>
+      <hr>
+      <hr>
+      <p>
+        🐷El baño Estético es ideal para higienizar a nuestra mascota de forma
+        simple y rápida. <br>
+        🚿Altamente recomendado como procedimiento previo en nuestra Peluqueria.🚿
+        <br><br>
+        🦄El baño santario incluye los cuidados necesarios para que nuestros
+        Pets puedan tener sus orejitas limpias por dentro y por fuera y sus
+        uñitas con un tratamiento de belleza estética. <br />
+        🛁Servicios adicionales a pedido: limpieza de glándulas anales e higiene
+        oral.🛁
+      </p>
+
+    </section>
+    <section id="acuatico" class="servicios">
+      <br><br>
+      <hr>
+      <hr>
+      <br><br>
+      <h3>💦🐕💦Circuito Acuático💦🐕💦</h3>
+
+      <br>
+      <hr>
+      <hr>
+      <p>
+        Este servicio incluye personal cualificado para entrenamiento y
+        terapias en el agua.
+        <br>
+        Desde ir a buscar un juguete hasta caminatas por circuitos de poca
+        profundidad salvando obstáculos. También ofrecemos nado en piletas mas
+        profundas y tobogán acuático.
+        <br>
+        Todo esto y más, supervisado por entrenadores y terapéutas
+        matriculados.
+      </p>
+
+
+    </section>
+    <section id="gym" class="servicios">
+      <br><br>
+      <hr>
+      <hr>
+      <br><br>
+      <h3>🏁Servicio de Gimnasio y Servicio de Entrenamiento🏁</h3>
+
+      <br>
+      <hr>
+      <hr>
+
+      <p>
+        Nuestro compromiso con sus mascotas es totalmente serio y
+        profesional. Es por esta razón que ofrecemos entrenadores de modelaje
+        para exposición🐩 y entrenadores para Lazarillos 🐕‍🦺...... Próximamente
+        incluiremos entrenadores para mascotas de terapia🐎 y de acompañantes
+        terapéuticos para adultos mayores.🦮
+      </p>
+      <br><br>
+    </section>
+
+    <hr>
+  </main>
+  <footer>
+    <div class="grid-container">
+
+      <div class="item1">
+        <p class="copy">
+          Desarrollado ❤️ por
+          <a href="https://twitter.com/koladechris" target="_blank">Nahir, Daniela, Sol y Laura🐢Grupo Codo A Codo❤️</a>
+          <br><br>
+          <p class="copy">&copy; Copyright PetSpa 2023</p>
+        </p>
+      </div>
+
+
+  </footer>
+  <script src="js/script.js">
+
+  </script>
+</body>
+
 </html>
