--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset='UTF-8'>
     <link rel='stylesheet' href='css/style.css'>
-    <script src='js/script.js'></script>
     <title>PetSpa</title>
 
     <!-- Agregar el Favicon -->
@@ -219,19 +218,21 @@ $8500.
 
 
     <footer>
-        <div class="container">
-            <p class="copy">&copy; Copyright PetSpa 2023</p>
-            <br>
-            <p>Atención al cliente - Lunes a Sábados de 9 a 20hs.</p>
-            <br>
-            <p><a href="mailto:petspa@gmail.com"></a>petspa@gmail.com</p>
-            <br>
-            <p class="copy">
-                Desarrollado &#x2661; por
-                <a href="https://twitter.com/koladechris" target="_blank">Grupo Codo A Codo</a>
-            </p>
-        </div>
-    </footer>
+         <div class="grid-container">
+
+                <div class="item1">
+                    <p class="copy">
+                        Desarrollado ❤️ por
+                        <a href="https://twitter.com/koladechris" target="_blank">Nahir, Daniela, Sol y Laura🐢Grupo
+                            Codo A Codo❤️</a>
+                        <br><br>
+                    <p class="copy">&copy; Copyright PetSpa 2023</p>
+                    </p>
+                </div>
+        </footer>
+        <script src='js/script.js'>
+
+        </script>
 </body>
 
 </html>
