--- a/index.html
+++ b/index.html
@@ -72,18 +72,17 @@
 
     <!-- footer -->
     <footer>
-        <div class="container">
-            <p class="copy">&copy; Copyright PetSpa 2023</p>
-            <br>
-            <p>Atención al cliente - Lunes a Sábados de 9 a 20hs.</p>
-            <br>
-            <p><a href="mailto:petspa@gmail.com"></a>petspa@gmail.com</p>
-            <br>
-            <p class="copy">
-                Desarrollado &#x2661; por
-                <a href="https://twitter.com/koladechris" target="_blank">Grupo Codo A Codo</a>
-            </p>
-        </div>
+        <div class="grid-container">
+
+            <div class="item1">
+              <p class="copy">
+                Desarrollado ❤️ por
+                <a href="https://twitter.com/koladechris" target="_blank">Nahir, Daniela, Sol y Laura🐢Grupo Codo A Codo❤️</a>
+                <br><br>
+                <p class="copy">&copy; Copyright PetSpa 2023</p>
+              </p>
+            </div>
+      
        </footer>
 </body>
 
