--- a/contacto.html
+++ b/contacto.html
@@ -2,38 +2,37 @@
 <html>
 
 <head>
-    <meta charset='UTF-8'>
-    <link rel='stylesheet' href='css/style.css'>
-    <script src='js/script.js'></script>
-    <title>PUPPY - Spa Canino</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="css/style.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>PetSpa-Servicios</title>
     <!-- Agregar el Favicon -->
-    <link rel="icon" href="img/android-chrome-192x192.png">
+    <link rel="icon" href="img/favicon.png" />
+
+    <!-- Agregar fuentes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <nav id='menu'>
-        <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
-        <ul>
-            <li><a href='index.html'>INICIO</a></li>
-            <li><a class='dropdown-arrow' href='http://'>PRODUCTOS</a>
-                <ul class='sub-menus'>
-                    <li><a href='http://'>Producto 1</a></li>
-                    <li><a href='http://'>Producto 2</a></li>
-                    <li><a href='http://'>Producto 3</a></li>
-                    <li><a href='http://'>Producto 4</a></li>
-                </ul>
-            </li>
-            <li><a href='sobrenosotros.html'>SOBRE NOSOTROS</a></li>
-            <li><a class='dropdown-arrow' href='servicios.html'>SERVICIOS</a>
-                <ul class='sub-menus'>
-                    <li><a href='http://'>PELUQUERIA</a></li>
-                    <li><a href='http://'>SPA</a></li>
-                    <li><a href='http://'>ATENCIÓN VETERINARIA</a></li>
-                </ul>
-            </li>
-            <li><a href='contacto.html'>CONTACTO</a></li>
+    <!-- Navbar -->
+    <nav>
+        <h1><img src="img/logo.png" alt=""></a>PetSpa</h1>
+        <ul class="navegacion">
+            <li><a href="index.html" class="nav-link">Inicio</a></li>
+            <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+            <li><a href="productos.html" class="nav-link">Productos</a></li>
+            <li><a href="contacto.html" class="nav-link">Contacto</a></li>
         </ul>
+        <ul>
+            <li><a href="#" class="nav-link">Soy cliente</a></li>
+        </ul>
+        <button class="menu-hamburguesa" id="menu-hamburguesa">
+            <ion-icon class="barras" name="menu-outline"></ion-icon>
+        </button>
     </nav>
+
 
 
 
@@ -98,18 +97,17 @@
 
 
     <footer>
-         <div class="container">
-            <p class="copy">&copy; Copyright PetSpa 2023</p>
-            <br>
-            <p>Atención al cliente - Lunes a Sábados de 9 a 20hs.</p>
-            <br>
-            <p><a href="mailto:petspa@gmail.com"></a>petspa@gmail.com</p>
-            <br>
-            <p class="copy">
-                Desarrollado &#x2661; por
-                <a href="https://twitter.com/koladechris" target="_blank">Grupo Codo A Codo</a>
-            </p>
-        </div>
+        <div class="grid-container">
+
+            <div class="item1">
+                <p class="copy">
+                    Desarrollado ❤️ por
+                    <a href="https://twitter.com/koladechris" target="_blank">Nahir, Daniela, Sol y Laura🐢Grupo Codo A
+                        Codo❤️</a>
+                    <br><br>
+                <p class="copy">&copy; Copyright PetSpa 2023</p>
+                </p>
+            </div>
     </footer>
 </body>
 
