agregando cambios Dani

--- a/productos.html
+++ b/productos.html
@@ -36,8 +36,8 @@
         </nav>
     
         <!-- productos a la venta en el spa -->
-    <section class="hero" id="about">
-        <img src="img/IMG COMPRA.jpg" alt="DANI" loading="lazy" class="IMG COMPRA" />
+    <section class="port">
+        <img src="img/compra online3.jpg" alt="DANI" loading="lazy" class="IMG COMPRA" />
         <div class="bio animate__animated animate__shakeX">
             <h2 class="bio-titulo">PRODUCTOS QUE PUEDES ADQUIRIR AQUI</h2>
             <p class="bio-texto">
@@ -51,7 +51,7 @@
     </section>
 <hr>
 
-    <section class="PRODUCTOS">
+    <section class="productos">
         <h2>PRODUCTOS</h2>
         <br>
         <H3>COLLARES Y ARNES</H3>
@@ -83,7 +83,7 @@ $8500.
                 <li><img src="img/SWEATER PARA PERROS 4.jpg" alt="buzo perro 4"></li>
             </ul>
         </div>
-        </p>
+        <p>
         Sweater de lana varios colores.
         <br>
         $7800
@@ -93,6 +93,7 @@ $8500.
         10% desc. en efectivo o trasferencia bancaria.
         <br>
         <br>
+
         <h3>LUDOTECA</h3>
         <div class="slider-frame">
             <ul>
@@ -120,10 +121,10 @@ $8500.
         
         <div class="slider-frame">
             <ul>
-                <li><img src="img/RASCADOR SIMPLE 7.jpg"alt="rascador simple1"></li>
+                <li><img src="img/RASCADOR SIMPLE 5.jpg"alt="rascador simple1"></li>
                 <li><img src="img/RASCADOR ROSA 2 PISOS 1.jpg" alt="rascador rosa2"></li>
                 <li><img src="img/RASCADOR PREMIUM CON TOBOGAN 3.jpg" alt="rascador con tobogan3"></li>
-                <li><img src="img/RASCADOR PREMIUM 4 PISOS 2.jpg" alt="rascador premium4"></li>
+                <li><img src="img/RASCADOR simple 4.jpg" alt="rascador premium4"></li>
             </ul>
         </div>
 
@@ -140,10 +141,6 @@ $8500.
         Rascador con tobogan.
         <br>
         $25000
-        <br>
-        Rascador Premium multiples pisos
-        <br>
-        $34200
         <br>
         3 cuotas sin interes.
         <br>
@@ -200,10 +197,12 @@ $8500.
             Manta frazada marron
             <br>
             $5900
+            <br>
             Manta marron estilo cama
             <br>
             $15600
             <br>
+            Efectivo o trasferencia.
 
         </p>
 <br>
